# fight-against-landlord

./: .gitignore  CMakeLists.txt  README.md
src/: card.cpp  card.h  cardset.cpp  cardset.h  fal.cpp  fal.h  ui.h
src/player/: player_base.cpp  player_base.h  player_computer_2.cpp  player_computer_2.h  player_normal.cpp  player_normal.h
